# requirements-auto-updater

./: .gitignore  AGENTS.md  FLOW_ANALYSIS.md  PLAN__GIT_IMPROVEMENTS.md  PLAN__ROLLBACK_TESTS.md  PLAN__pyproject_validation.md  PLAN__python_check.md  README.md  auto_updater.py  compare_uv_lock_plan.md  compilation_evaluator.py  django_detection_plan.md  dotenv_sample.txt  environment_checker.py  lib_call_runtests.py  lib_common.py  lib_compilation_evaluator.py  lib_django_updater.py  lib_emailer.py  lib_environment_checker.py  lib_git_handler.py  plan_for_collectstatic.md  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run_tests.py  self_updater.py  temp__check_files.py  test_uv_updater.py  tests.py  tests_plan.md
.github/: copilot-instructions.md
lib/: lib_call_runtests.py  lib_compilation_evaluator.py  lib_django_updater.py  lib_emailer.py  lib_environment_checker.py  lib_git_handler.py  lib_perms_and_groups.py  lib_uv_updater.py
test_docs/differences/: file_a.txt
test_docs/no_differences_A/: file_a.txt  file_b.txt
test_docs/no_differences_B/: file_a.txt
tests/: test_django_updater.py  test_environment_checks.py  test_main.py  test_misc.py  test_uv_updater.py  tests.py
