[project]
name = "requirements-auto-updater"
version = "0.0.0"
description = "Auto updates project packages and venv."
readme = "https://github.com/Brown-University-Library/requirements-auto-updater/blob/main/README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv~=1.1.0",
]


[dependency-groups]
local = []
staging = []
prod = []


## ruff (linter-formatter/code-checker) start ##

[tool.ruff]
line-length = 125
indent-width = 4
target-version = "py38"

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
avoid-escape = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pycodestyle]
max-line-length = 125

[tool.ruff.lint.pydocstyle]
convention = "google"

## ruff (linter-formatter/code-checker) end ##
